<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableLayout"
    android:stretchColumns="2"
    android:shrinkColumns="2"
    >
    <TableRow>
        <TextView
            android:text="@string/niraj_bava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:layout_span="1"
            />
    </TableRow>
    <TableRow>
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="btn"
           android:textSize="20sp"
           tools:cornerRadius="5dp"
           android:layout_column="1"
           />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="btn"
            android:textSize="20sp"
            tools:cornerRadius="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="btn"
            android:textSize="20sp"
            tools:cornerRadius="5dp"
            />
    </TableRow>
    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn50"
            android:textSize="20sp"
            tools:cornerRadius="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn60"
            android:textSize="20sp"
            tools:cornerRadius="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn70"
            android:textSize="20sp"
            tools:cornerRadius="5dp"
            />

    </TableRow>
    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn17"
            android:textSize="20sp"
            tools:cornerRadius="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn19"
            android:textSize="20sp"
            tools:cornerRadius="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn20"
            android:textSize="20sp"
            tools:cornerRadius="5dp"
            />

    </TableRow>
    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="btn"
            android:textSize="20sp"
            tools:cornerRadius="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="btn"
            android:textSize="20sp"
            tools:cornerRadius="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="btn"
            android:textSize="20sp"
            tools:cornerRadius="5dp"
            />

    </TableRow>
    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="btn"
            android:textSize="20sp"
            tools:cornerRadius="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="btn"
            android:textSize="20sp"
            tools:cornerRadius="5dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="btn"
            android:textSize="20sp"
            tools:cornerRadius="5dp"
            />

    </TableRow>
</TableLayout>