<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomFonts">

    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#F86C01"
        android:backgroundTint="@null"
        android:gravity="center"
        android:text="@string/Hindi"
        android:textColor="@color/white"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/t2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#64FF2B"
        android:backgroundTint="@null"
        android:gravity="center"
        android:text="@string/urdu"
        android:textColor="@color/white"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/t3"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#1EBFFF"
        android:backgroundTint="@null"
        android:gravity="center"
        android:text="@string/english"
        android:textColor="@color/white"
        android:textSize="20dp" />

</LinearLayout>