<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListenersPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#DAFF5722"
                android:gravity="center"
                android:text="@string/btn16"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#2196F3"
                android:gravity="center"
                android:text="@string/btn26"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#3F51B5"
                android:gravity="center"
                android:text="@string/btn36"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#E91E63"
                android:gravity="center"
                android:text="@string/btn46"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#FFC107"
                android:gravity="center"
                android:text="@string/btn5"
                android:onClick="btn5"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="#DAFF5722"
                android:gravity="center"
                android:onClick="btn6"
                android:text="@string/btn6"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>