<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tosts">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="17sp"
            android:text="@string/default_toast"
            app:cornerRadius="10sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/simple_gravity_toast"
            android:textSize="17sp"
            app:cornerRadius="10sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="17sp"
            android:text="@string/nested_gravity_toast"
            app:cornerRadius="10sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>